[package]
name = "divina"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "A modern build system for assembly"
readme = "../../README.rst"
homepage = "https://divina.land"
repository = "https://github.com/divinaland/Divina"
license = "GPL-3.0-only"
keywords = ["divina", "buildsystem", "build", "assembly", "asm", "nasm", "yasm"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
# CLI
structopt = "0.3.26"

# Configuration
divina_config = { path = "../divina_config" }

# Git
divina_git = { path = "../divina_git" }

# Environment
dotenv = "0.15.0"

# Async
tokio = { version = "0.3.7", features = ["full"] }

# Logging
# flexi_logger = "0.22.3"
# log = "0.4.14"
human-panic = "1.0.3"

# Compilation
divina_compile = { path = "../divina_compile" }

# Utility
divina_util = { path = "../divina_util" }

[target.'cfg(windows)'.dependencies]
# Allocator
mimalloc = { version = "0.1.26", default-features = false }

[target.'cfg(unix)'.dependencies]
# Allocator
jemallocator = "0.3.2"
