[package]
name = "divina_compile"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Divina's compiler wrapper"
readme = "../../README.rst"
homepage = "https://divina.land"
repository = "https://github.com/divinaland/Divina"
license = "GPL-3.0-only"
keywords = ["divina", "buildsystem", "build", "assembly", "asm", "nasm", "yasm"]
categories = ["development-tools::build-utils", "development-tools"]
publish = false

[dependencies]
# Configuration
divina_config = { path = "../divina_config" }

# Command-line
shellfn = "0.1.1"
