[package]
name = "divina_util"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Divina's utilities"
readme = "../../README.md"
homepage = "https://divina.land"
repository = "https://github.com/divinaland/Divina"
license = "GPL-3.0-only"
keywords = ["divina", "build", "asm", "nasm", "yasm"]
categories = ["development-tools"]
